   and %@. From a report by Padraic. [MG]
 * Fix some cases where functions like lcon() could return partial
   dbrefs at the end of a long output string. [SW]
 * When magic-sorting strings with embedded dbrefs, setunion() no longer
   treats different objects with the same name as being identical. Reported
   by Minion. [MG] [GM]

Functions:
 * isregexp() to validate regexp patterns. Suggested by Padraic. [DC]

Version 1.8.4 patchlevel 7                                 Sep 25, 2011

Deprecation:
 * @elock, @eunlock, @ulock and @uunlock are deprecated. [SW]
 * @doing is now deprecated (see below).
 * The "newline_one_char" mush.cnf option is now deprecated, and will soon
   always be "Yes". If you have it set to No and have any code that assumes
   strlen(%r) == 2, you should change it now. [MG]

Major changes:
 * DOING is now a standard attribute. Your @doing can be any length, and
   doing() returns the whole string (though it will still be truncated when
   displayed on WHO), can contain ANSI and will be evaluated each time it's 
   displayed, allowing for random/rotating doings. The @doing command will
   escape its input before setting into an attribute, for backwards
   compatability, but is now deprecated; use &doing to store code. [MG]
 * All objects with the same flags or powers set share the same
   storage for those flags. Large games should see slightly reduced memory
   use. Suggested by [GM]. [SW]

Minor changes:
 * Rewrite memcheck allocation tracking to use a more efficient data
   structure. [SW]
 * Help file improvements, by Ender and others. [SW] [MG]
 * Added a new 'getting started' helpfile, that gives a brief overview of
   how to move, talk, use channels and @mail. Suggested by Wiggles. [MG]
 * @decompile now uses '&attr obj=value', even for standard attributes, to
   avoid possible clashes with command names. Suggested by Mercutio. [MG]
 * Extended convtime understands timestamps of the form 